removed config from plugin